# peridigm

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  Dockerfile  KNOWN_ISSUES.md  Makefile  cmake_install.cmake  cppcheck_fails.txt
.github/workflows/: test.yml
doc/: BuildingPeridigm.md  InstallingThirdPartyLibs.md  NetCDF.md  RunningSimulationsDocker.md
dockerfiles/: Dockerfile-master  Dockerfile-test
examples/disk_impact/: disk_impact.e  disk_impact.h
scripts/: MergeFiles.py  conjoin  decomp  epu  exodiff  exotxt  fix_test_infrastructure.ps1  fix_test_infrastructure.sh  nem_slice  nem_spread
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/api/: Peridigm_API.cpp
src/compute/: CTestTestfile.cmake  Makefile  Peridigm_Compute_Acceleration.cpp  Peridigm_Compute_Angular_Momentum.cpp  Peridigm_Compute_Block_Data.cpp  Peridigm_Compute_Bond_Visualization.cpp  Peridigm_Compute_Bond_Visualization.hpp  Peridigm_Compute_Contact_Force.cpp  Peridigm_Compute_Deformation_Gradient.cpp  Peridigm_Compute_Energy.cpp  Peridigm_Compute_Error.cpp  Peridigm_Compute_Force.cpp  Peridigm_Compute_JIntegral.cpp  Peridigm_Compute_Kinetic_Energy.cpp  Peridigm_Compute_Linear_Momentum.cpp  Peridigm_Compute_Nearest_Point_Data.cpp  Peridigm_Compute_Neighborhood_Volume.cpp  Peridigm_Compute_Node_Set_Data.cpp  Peridigm_Compute_Nonlinear_Solver_Iterations.cpp  Peridigm_Compute_Number_Of_Neighbors.cpp  Peridigm_Compute_OBC_Functional.cpp  Peridigm_Compute_Radius.cpp  Peridigm_Compute_Stored_Elastic_Energy.cpp  Peridigm_Compute_Stored_Elastic_Energy_Density.cpp  cmake_install.cmake
src/contact/: Peridigm_UserDefinedTimeDependentShortRangeForceContactModel.cpp
src/contact/unit_test/: CMakeLists.txt  unitTestMain.cpp  utPeridigm_ShortRangeForceContactModel.cpp
src/core/: CTestTestfile.cmake  Makefile  Peridigm.cpp  Peridigm.hpp  Peridigm_Block.cpp  Peridigm_Block.hpp  Peridigm_BlockBase.hpp  Peridigm_BoundaryAndInitialConditionManager.cpp  Peridigm_ComputeManager.cpp  Peridigm_ContactBlock.hpp  Peridigm_ContactManager.cpp  Peridigm_DataLoader.cpp  (+16 more)
src/damage/unit_test/: CMakeLists.txt  utPeridigm_CriticalStretchDamageModel.cpp
(+245 files in other folders)
